--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -139,11 +139,18 @@ label {
 }
 
 input[type="text"],
-input[type="email"] {
+input[type="email"],
+input[type="tel"],
+select {
   padding: 0.75rem;
   border: 1px solid #ccc;
   border-radius: 6px;
   font-size: 1rem;
+}
+
+.cta__form select {
+  background-color: #fff;
+  appearance: none;
 }
 
 .notice {
