--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>DIS-Eksamen-Gruppe20 Booking</title>
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
